@@ -17,15 +17,15 @@ I love data analysis. I often find my self creating graph and charts of various 
 - link following
 - url lists
 - save and load configurations
-- data transformation 
+- data transformation
 
 ## How to
 
 - Download the source and build the jar
 - Download a pre-build binary
-    - download the far jar: [5p1d3r-1.0.jar](https://github.com/adamyork/5p1d3r/releases/download/1.0/5p1d3r-1.0.jar) 
-        - run: ```java -jar 5p1d3r-1.0.exe``` (requires jdk11+)
-    - windows installer: [5p1d3r-1.0.exe](https://github.com/adamyork/5p1d3r/releases/download/1.0/5p1d3r-1.0.exe) 
+    - download the far jar:
+        - run: ```java -jar 5p1d3r-1.1.exe``` (requires jdk14+)
+    - windows installer: [5p1d3r-1.1.exe](https://github.com/adamyork/5p1d3r/releases/download/1.1/5p1d3r-1.1.exe.zip) 
     - mac: TBD
 - run the app
 
@@ -60,6 +60,14 @@ I love data analysis. I often find my self creating graph and charts of various 
 
 
 **Note this is effectively beta software. I am sure there are issues. Please file a bug report if you find anything**
+
+## Modular build commands
+```
+jdeps -R --multi-release 14 --ignore-missing-deps --class-path "build\libs\BOOT-INF\lib" --print-module-deps build\classes\java\main\com\github\adamyork\fx5p1d3r\Main.class > temp.txt
+jdeps -R build\libs\5p1d3r-1.1.jar > temp.txt
+jpackage --type exe --dest build/installer --input build/libs --name 5p1d3r --main-class org.springframework.boot.loader.JarLauncher --main-jar 5p1d3r-1.1.jar --java-options -Xmx2048m --runtime-image build/java-runtime --app-version 1.1 --win-dir-chooser
+jlink --no-header-files --no-man-pages --compress=2 --strip-debug --add-modules "java.base,java.desktop,java.logging" --output build/java-runtime
+```
 
 ## TODO
 - Finish native packaging for Mac in build file
